--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.3",
+    "@astrojs/rss": "^4.0.7",
     "astro": "^4.14.5",
     "sharp": "^0.33.5",
     "typescript": "^5.5.4"
